dynamic title class

--- a/themes/cmn/layouts/_default/single.html
+++ b/themes/cmn/layouts/_default/single.html
@@ -2,7 +2,7 @@
 <html>
 
     {{ partial "head.html" . }}
-    <body class="page about">
+    <body class="page {{lower .Title}}">
 
     {{ partial "nav-back.html" . }}
 
