--- a/static/admin/admin.css
+++ b/static/admin/admin.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,900&display=swap');
+
 html, body{
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
