--- a/themes/cmn/static/css/stylesheet.css
+++ b/themes/cmn/static/css/stylesheet.css
@@ -1,7 +1,7 @@
 /* Start of example */
 /*! minireset.css v0.0.3 | MIT License | github.com/jgthms/minireset.css */
 blockquote, body, dd, dl, dt, fieldset, figure, h1, h2, h3, h4, h5, h6, hr,
-html, iframe, legend, li, ol, p, pre, textarea, ul {
+html, iframe, legend, li, ol, pre, textarea, ul {
   margin: 0;
   padding: 0; }
 
